# technology-engineering

./: .gitignore  Oracle Cloud Migration Service Template.md  README.md  ServerAccess and Steps.txt  index.html  sonar-project.properties
ai/generative-ai-service/a-getting-started-guide/files/: .env.example  Aider-OCA-Connection.md  Cline-OCA-Connection.md  Codex-OCA-Connection.md  Kilo-OCA-Connection.md  LangChainOCI-GenAIOCI-Connection.md  N8N-GenAIOCI-Connection.md  OracleDB-GenAIOCI-Connection.md  README.md  pyproject.toml
ai/generative-ai-service/a-getting-started-guide/files/n8n/: oci-genai-gateway-summarizer.workflow.json  sample-summary-request.json
ai/generative-ai-service/a-getting-started-guide/files/notebooks/: 00_oci_genai_setup_and_auth.ipynb  01_oracle_database_26ai_oci_sdk.ipynb  02_langchain_oci_genai.ipynb  03_n8n_oci_genai_gateway.ipynb
ai/generative-ai-service/a-getting-started-guide/files/video-analysis-studio/: .gitattributes  README.md  setup.ps1
observability-and-management/assets/oci-dbman-opsi/: .env.local.example  .gitignore  .gitleaks.toml  CLAUDE.md  KB.md  README.md  pyproject.toml
observability-and-management/assets/oci-dbman-opsi/.github/workflows/: ci.yml
observability-and-management/assets/oci-dbman-opsi/docs/: CI.md  RUNBOOK-e2e-cap.md  architecture.md  security.md
observability-and-management/assets/oci-dbman-opsi/scripts/: pre-push
observability-and-management/assets/oci-dbman-opsi/tests/: test_agent_scripts.py  test_bastion_exec.py  test_ci_config.py  test_cli.py  test_config.py  test_conn.py  test_credentials.py  test_cross_region.py  test_datasafe.py  test_db_check.py  test_db_exec.py  test_db_scripts.py  test_discovery.py  test_doctor.py  test_enablement.py  test_envfile.py  test_handoff.py  test_iam.py  test_journal.py  test_oci_cli.py  test_oci_dbmgmt.py  test_oci_util.py  test_opsi_payloads.py  test_orchestrator.py  test_pre_push.py  test_preflight.py  test_prerequisites.py  test_public_repo_readiness.py  test_redact.py  test_regional_provisioning.py  test_remediation.py  test_reporting.py  test_runner.py  test_status.py  test_terraform.py  test_tf_outputs.py  test_validation.py  test_wizard.py
(+6611 files in other folders)
